--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="container mt-5">
     <h3 class="mb-4">Artesanías</h3>
     <div id="galeria" class="row g-4"></div>
-    <p id="mensajeError" class="text-danger mt-3" style="display:none;">Error al cargar imágenes.</p>
+    <p id="error" class="text-danger mt-3" style="display:none;">Error al cargar imágenes.</p>
   </div>
 
   <div class="container btn-whatsapp-container text-center">
