"siguen modificaciones de estilo"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="col-md-9 text-center text-md-start">
             <h1 class="titulo-principal">Bienvenidos a Simplezas</h1>
-            <p class="lead">Descubre mis creaciones hechas a mano con cuidado y atención al detalle.</p>
+            <p class="lead subtitulo">Descubre mis creaciones hechas a mano con cuidado y atención al detalle.</p>
           </div>
         </div>
       </div>
