"seguimos modificando estilo"

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </a>
   </main>
   <!-- Footer -->
-  <footer class="text-center p-3 mt-5">
+  <footer class="footer-personalizado">
     <p class="mb-1">&copy; 2025 Simplezas - Artesanías hechas a mano</p>
     <p class="mb-1">Hecho con amor desde Luján, Buenos Aires, Argentina</p>
     <p class="mb-0">Contactame por <a href="https://wa.me/5492323589433" target="_blank">WhatsApp</a></p>
