--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <div class="container mt-5">
-      <h3 class="mb-4">Artesanías</h3>
+      <h3 class="mb-4">Aros con base en acero quirúrgico, llaveros y más...</h3>
       <div id="galeria" class="row g-4"></div>
       <p id="error" class="text-danger mt-3" style="display:none;">Error al cargar imágenes.</p>
     </div>
@@ -51,7 +51,7 @@
   <!-- Footer -->
   <footer class="footer-personalizado">
     <p class="mb-1">&copy; 2025 Simplezas - Artesanías hechas a mano</p>
-    <p class="mb-1">Hecho con amor desde Luján, Buenos Aires, Argentina</p>
+  <!--  <p class="mb-1">Hecho con amor desde Luján, Buenos Aires, Argentina</p> -->
     <p class="mb-0">Contactame por <a href="https://wa.me/5492323589433" target="_blank">WhatsApp</a></p>
   </footer>
 
