--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p id="error" class="text-danger mt-3" style="display:none;">Error al cargar imágenes.</p>
     </div>
 
-    <div class="container btn-whatsapp-container text-center">
+    <div class="container btn-whatsapp-container text-center mb-5">
       <a href="https://wa.me/5492323672451?text=Hola%2C%20vi%20tus%20artesan%C3%ADas%20en%20la%20web%20y%20quer%C3%ADa%20consultarte." 
         target="_blank" 
         class="btn btn-success btn-lg d-inline-flex align-items-center justify-content-center">
